--- a/client/vercel.json
+++ b/client/vercel.json
@@ -9,6 +9,6 @@
     "env": {
       "NODE_ENV": "production"
     },
-    "installCommand": "npm install --no-optional",
+    "installCommand": "npm install --legacy-peer-deps",
     "buildCommand": "npm run build"
   }
