--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "react-redux": "^9.1.2",
+    "rollup": "^4.28.1",
     "vite": "^5.4.10"
   }
 }
